# gal

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  flake.nix
.helix/: languages.toml
src/: main.rs
