[package]
name = "gal-cli"
version = "0.1.0"
edition = "2024"
authors = ["Adam Freeth <git@freeth.dev>"]
description = "A terminal-based live monitor for GitHub Actions"
license = "MIT"
repository = "https://github.com/adamjhf/gal"
homepage = "https://github.com/adamjhf/gal"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
octocrab = "0.44.1"
ratatui = "0.29.0"
throbber-widgets-tui = "0.8.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-width = "0.2"
webbrowser = "1.0.5"

[[bin]]
name = "gal"
path = "src/main.rs"
