[package]
name = "gal-cli"
version = "0.1.1"
edition = "2024"
authors = ["Adam Freeth <git@freeth.dev>"]
description = "A terminal-based live monitor for GitHub Actions"
license = "MIT"
repository = "https://github.com/adamjhf/gal"
homepage = "https://github.com/adamjhf/gal"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.43", default-features = false }
clap = { version = "4.5.58", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
octocrab = "0.49.5"
ratatui = "0.30.0"
serde_json = "1.0.149"
throbber-widgets-tui = "0.10.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-width = "0.2.2"
webbrowser = "1.1.0"
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }

[[bin]]
name = "gal"
path = "src/main.rs"
